--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -16,3 +16,16 @@
     "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
   </em>
 </p>
+
+<p>
+  This workshop is run by
+  the <a href="https://rroxford.github.io/">Reproducible Research
+  Oxford</a> project, hosted by Stephen Jones (Faculty of Medieval and
+  Modern Languages, University of Oxford). For announcements about
+  future workshops and related activities, check
+  our <a href="https://rroxford.github.io/">project website</a>,
+  subscribe to
+  our <a href="https://web.maillist.ox.ac.uk/ox/info/rroxford">
+  mailing list</a>, and follow us on
+  Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
+</p>
