--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,8 +1,9 @@
 <p id="who">
-  <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
-  <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
+  <strong>Who:</strong> The course is aimed at students, researchers,
+  and staff of the University of Oxford.
+  <strong>Please register with your .ox.ac.uk email address.</strong>
+   <strong>
+    You don't need to have any previous knowledge of the tools that
+    will be presented at the workshop.
   </strong>
 </p>
