--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -11,6 +11,7 @@
       <li><a href="{{site.swc_pages}}/shell-novice/reference/">Reference...</a></li>
     </ul>
   </div>
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-python">Programming in Python</h3>
     <ul>
@@ -24,19 +25,21 @@
       <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference/">Reference...</a></li>
     </ul>
   </div>
-  <!--
+  -->
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
     <ul>
+      <li>Introduction to R programming language and RStudio</li>
       <li>Working with vectors and data frames</li>
-      <li>Reading and plotting data</li>
       <li>Creating and using functions</li>
       <li>Loops and conditionals</li>
+      <li>Reading and Writing data</li>
       <li>Using R from the command line</li>
+      <li>Introduction to tidyverse (key R libraries)</li>
+      <li>Introduction to visualisation with ggplot2 (incl Grammar of Graphics)</li>
       <li><a href="{{site.swc_pages}}/r-novice-inflammation/reference/">Reference...</a></li>
     </ul>
   </div>
-  -->
   <!--
   <div class="col-md-6">
     <h3 id="syllabus-matlab">Programming in MATLAB</h3>
@@ -67,6 +70,7 @@
       <li><a href="{{site.swc_pages}}/git-novice/reference/">Reference...</a></li>
     </ul>
   </div>
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
@@ -81,6 +85,7 @@
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference/">Reference...</a></li>
     </ul>
   </div>
+    -->
     <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
