--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -20,9 +20,8 @@
 <p>
   This workshop is run by
   the <a href="https://rroxford.github.io/">Reproducible Research
-  Oxford</a> project, hosted by Stephen Jones (Faculty of Medieval and
-  Modern Languages, University of Oxford). For announcements about
-  future workshops and related activities, check
+  Oxford</a> project, hosted by Stephen Jones (Faculty of Linguistics, Philology and Phonetics, University of Oxford). 
+  For announcements about future workshops and related activities, check
   our <a href="https://rroxford.github.io/">project website</a>,
   subscribe to
   our <a href="https://web.maillist.ox.ac.uk/ox/info/rroxford">
