--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -27,4 +27,5 @@
   our <a href="https://web.maillist.ox.ac.uk/ox/info/rroxford">
   mailing list</a>, and follow us on
   Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
+  We thank the <a href="http://www.ling-phil.ox.ac.uk/">Faculty of Linguistics, Philology, and Phonetics</a> for supporting this workshop financially.
 </p>
