Updated venue, accessibility, acknowledgements.

--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -20,12 +20,16 @@
 <p>
   This workshop is run by
   the <a href="https://rroxford.github.io/">Reproducible Research
-  Oxford</a> project, hosted by Stephen Jones (Faculty of Linguistics, Philology and Phonetics, University of Oxford). 
-  For announcements about future workshops and related activities, check
+  Oxford</a> project, hosted by Stephen Jones
+  (<a href="http://www.ling-phil.ox.ac.uk/">Faculty of Linguistics,
+  Philology, and Phonetics</a>, University of Oxford).  For
+  announcements about future workshops and related activities, check
   our <a href="https://rroxford.github.io/">project website</a>,
   subscribe to
   our <a href="https://web.maillist.ox.ac.uk/ox/info/rroxford">
   mailing list</a>, and follow us on
-  Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
-  We thank the <a href="http://www.ling-phil.ox.ac.uk/">Faculty of Linguistics, Philology, and Phonetics</a> for supporting this workshop financially.
+  Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>. We
+  thank the <a href="http://www.ling-phil.ox.ac.uk/">Faculty of
+  Linguistics, Philology, and Phonetics</a> for financial and logistic
+  support of this workshop.
 </p>
